_03Mapping update